# 182-basic-multi-agent

./: pyproject.toml
app/: multiagent.py
